--- a/hello.html
+++ b/hello.html
@@ -6,6 +6,6 @@
     <title>My Webpage</title>
   </head>
   <body>
-     Hello, World! Hello again!! Hello hello hello
+     Hello, World! Hello again!!
   </body>
 </html>
